styles/app.css
body {
  font-family: 'Exo', sans-serif;
  background-image: url(../img/background2.jpg);
  background-size: 100% 100%;
  text-align: center;
  width: 100%;
  height: 100%;
}

.covered {
  background-image: url(img/card-back.png);
}

.card {
  float: left;
  border: solid 1px black;
  width: 125px;
  border-radius: 5px;
  height: 185px;
  margin-right: 20px;
  margin-left:20px;
  margin-bottom:15px;
  background-size: 100% 100%;
}

div {
  display: inline-block;
}

button {
  font-family: 'Exo', sans-serif;
  margin-top: 10%;
  font-size: xx-large;
  border-radius: 10px;
  background-color: white;
}

.hand {
  overflow: auto;
}

.player-hand-container {
  position: absolute;
  bottom:10%;
  color:white;
  left:auto;
  transform: translate(-50%,0%);
  min-width:700px;
}

.dealer-hand-container {
  color:white;
  top:10%;
  position:absolute;
  left:50%;
  transform: translate(-50%,0%);
  min-width:700px;
}

.cardcount {
  background-image: url(file:///Users/student/Codes/2015-06-blackjack/img/card-back.png);
  background-size: 100% 100%;
  position:absolute;
  width: 125px;
  border-radius: 5px;
  height: 185px;
  top: 40px;
  left:20px;
}

.cardcount2 {
  position:absolute;
  width: 125px;
  top: 205px;
  left:20px;
  color:white;
}

